Feat: 계정과 닉네임 중복확인 API (#4)
- 계정과 닉네임을 가지는 유저가 있는지 확인 후 결과에 따라 DuplicationStatus와 중복 여부를 확인한 데이터 반환